fixed bio cropping

--- a/web-portfolio-2024/src/app/main-page/bio/bio.component.scss
+++ b/web-portfolio-2024/src/app/main-page/bio/bio.component.scss
@@ -16,7 +16,7 @@ section#bio {
         }
 
         p {
-          font-size: min(5vw, 1.5rem);
+          font-size: min(4vw, 1.5rem);
         }
       }
     }
